# hw-1-mfti-python

./: .gitignore  README.md  main.py  pyproject.toml  tests.py
