[tool.poetry]
name = "python-hw-one"
version = "0.1.0"
description = ""
authors = ["Чумаков Михаил Дмитриевич <mikhail.chumakov@sbermarket.ru>"]
readme = "README.md"
packages = [{include = "python_hw_one"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
rich = "^13.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
